--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,3 +1,5 @@
+@use '../abstracts';
+
 // BUTTON BACKGROUND
 .btn-bg {
 
@@ -26,5 +28,126 @@
         // background: $button-crimson-hover;
         // box-shadow: $box-dark-top-sm;
         opacity: 0;
+    }
+}
+
+// BUTTONS CONTAINER
+.buttons-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 2.5vh 5vw;
+    gap: 1rem;
+    margin: 1.5rem 0 0;
+    @include abstracts.sm {
+        justify-content: start;
+        gap: 2rem;
+    }
+}
+
+// CTA BUTTONS
+.btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: .8rem 1rem;
+    min-width: 9.5rem;
+    width: 10rem;
+
+    text-align: center;
+    letter-spacing: .025rem;
+    text-transform: capitalize;
+
+    position: relative;
+    isolation: isolate;
+    border-radius: abstracts.$brand-br;
+    transition: .25s;
+    @include abstracts.xsm {
+        cursor: default;
+    }
+
+    &::before, &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: inherit;
+        transition: .2s;
+        z-index: -1;
+    }
+    &::before {
+        box-shadow: abstracts.$box-light-top-sm;
+        background: linear-gradient(0deg, #000a, rgba(0, 0, 0, .300));
+    }
+    &::after {
+        box-shadow: abstracts.$box-light-top-sm-hover;
+        opacity: 0;
+    }
+
+    &.btn-primary {
+        color: abstracts.$text-light;
+        &::before {
+            background: abstracts.$button-crimson
+        }
+        &::after {
+            background: abstracts.$button-crimson-hover;
+        }
+    }
+    &.btn-secondary {
+        color: abstracts.$overlay-blue-dark;
+        &::before {
+            background: #ffff;
+            box-shadow: none;
+            border: 1px solid abstracts.$overlay-blue-dark;
+        }
+        &::after {
+            background: #fafafa;
+            box-shadow: none;
+            border: none;
+        }
+    }
+    &.btn-dark {
+        color: abstracts.$text-light;
+        &::before {
+            background: abstracts.$overlay-btn;
+        }
+        &::after {
+            background: abstracts.$overlay-btn-hover;
+        }
+    }
+    &.btn-light {
+        color: abstracts.$overlay-blue-dark;
+        &::before {
+            background: abstracts.$button-light;
+            box-shadow: none;
+            border: 1px solid abstracts.$overlay-blue-dark;
+        }
+        &::after {
+            background: abstracts.$button-light-hover;
+            box-shadow: none;
+            border: none;
+        }
+    }
+    
+
+    // HOVER AND ACTIVE CLASS MEDIA QUERY
+    @media (min-width: 820px) {
+        &:hover {
+            transform: scale(.97);
+            letter-spacing: normal;
+            &::before {opacity: 0};
+            &::after {opacity: 1};
+        }
+    }
+    // MOBILE BTN
+    @media (max-width: 820px) {
+        &:active {
+            transform: scale(.97);
+            letter-spacing: normal;
+            &::before {opacity: 0};
+            &::after {opacity: 1};
+        }
     }
 }
