--- a/css/style.css
+++ b/css/style.css
@@ -416,18 +416,18 @@ form {
   display: flex;
   flex-direction: column;
   margin: 10vh auto 5vh;
-  padding: 10vh 5vw;
+  padding: 5vh 5vw;
 }
-@media (min-width: 1024px) {
+@media (min-width: 576px) {
   form {
     width: 50%;
-    border-radius: 5px;
+    border-radius: 0.25rem;
   }
 }
 form .input-div {
   position: relative;
-  padding: 1rem 0;
-  margin-bottom: 1rem;
+  padding: 1rem 0 0;
+  margin-bottom: 2rem;
 }
 form .input-div label {
   position: absolute;
@@ -437,9 +437,8 @@ form .input-div label {
   transition: 0.25s;
 }
 form .input-div input, form .input-div textarea {
-  padding: 1rem 0.5rem;
+  padding: 0.65rem 0.5rem;
   width: 100%;
-  margin: 0.5em 0;
   border-radius: 0.25rem;
   transition: 0.5s;
   border: none;
@@ -448,6 +447,11 @@ form .input-div input, form .input-div textarea {
   background: #1f252d;
   outline: 1px solid #b3c0cc;
   color: #f4f4f4;
+}
+@media (min-width: 576px) {
+  form .input-div input, form .input-div textarea {
+    padding: 0.5rem;
+  }
 }
 form .input-div input:invalid, form .input-div textarea:invalid {
   background-color: #ddd;
@@ -520,7 +524,7 @@ form button::before, form button::after {
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 0.5rem;
+  border-radius: inherit;
   border: none;
   outline: none;
   z-index: -1;
@@ -972,6 +976,7 @@ form button:hover::after {
   text-transform: capitalize;
   margin-bottom: 10vh;
   font-size: 2rem;
+  font-size: clamp(2rem, 4vw, 2.25rem);
 }
 #footer .footer .footer-top .socialMedia-links {
   grid-template-columns: 1fr;
