--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ section {
 section .section-title {
   font-size: 2.5rem;
   font-size: clamp(2rem, 5vw, 2.5rem);
-  font-weight: 600;
   color: #29323d;
   margin-bottom: 10vh;
   text-transform: uppercase;
@@ -867,6 +866,14 @@ form button:hover::after {
 
 #contact {
   scroll-margin-top: 5vh;
+  background: #f4f4f4;
+  padding: 10vh 5vw;
+  min-height: 90vh;
+}
+@media (min-width: 820px) {
+  #contact {
+    padding: 10vh 5vw 5vh;
+  }
 }
 
 .contact {
@@ -875,13 +882,6 @@ form button:hover::after {
   width: 100%;
   position: relative;
   transform-style: preserve-3d;
-  background: #f4f4f4;
-  padding: 10vh 5vw;
-}
-@media (min-width: 820px) {
-  .contact {
-    padding: 10vh 5vw 5vh;
-  }
 }
 .contact .contact-header {
   margin-bottom: 10vh;
@@ -897,10 +897,10 @@ form button:hover::after {
   .contact .contact-items {
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 5vw;
+    margin-top: 20vh;
   }
 }
 .contact .contact-items .contact-item {
-  padding: 0.5rem;
   padding: 0.25rem 0.5rem 1rem 1rem;
   background: #fff;
   border-radius: 0.25rem;
@@ -910,6 +910,7 @@ form button:hover::after {
 .contact .contact-items .contact-item .title {
   text-transform: capitalize;
   font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.125rem);
   transition: 0.25s;
   position: relative;
 }
@@ -920,7 +921,7 @@ form button:hover::after {
 .contact .contact-items .contact-item .title i {
   transform: translateY(-1rem) scale(1.1);
   font-size: 2rem;
-  filter: drop-shadow(0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.1));
   margin-bottom: 0.5rem;
   transition: 0.25s ease-in-out;
 }
@@ -928,9 +929,10 @@ form button:hover::after {
   content: attr(data-info);
   position: absolute;
   top: 1rem;
-  right: 5vw;
-  color: rgba(41, 50, 61, 0.08);
-  font-size: 3rem;
+  right: 0.5rem;
+  color: rgba(41, 50, 61, 0.05);
+  font-size: 2.5rem;
+  font-size: clamp(2.5rem, 2vw, 3.5rem);
   letter-spacing: 1rem;
   transition: 0.5s;
   opacity: 0.5;
