--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -1,9 +1,13 @@
 @use '../abstracts';
 // contact
     #contact {
-        // border: 2px solid red;
         scroll-margin-top: 5vh;
-
+        background: #f4f4f4;
+        padding: 10vh 5vw;
+        min-height: 90vh;
+        @include abstracts.lg {
+            padding: 10vh 5vw 5vh;
+        }
     }
     .contact {
         flex-direction: column;
@@ -11,40 +15,38 @@
         width: 100%;
         position: relative;
         transform-style: preserve-3d;
-        background: #f4f4f4;
-        padding: 10vh 5vw;
-        @include abstracts.lg {
-            padding: 10vh 5vw 5vh;
-        }
-        // section-title
+        // SECTION-TITLE
         .contact-header {
             margin-bottom: 10vh;
         }
-        // end of section-title
-        // contact items container
+        // CONTACT-ITEMS = GRID CONTAINER
         .contact-items {
             width: 100%;
             display: grid;
             gap: 10vh;
             width: 100%;
+            margin-top: 5vh;
+            // WIDE SCREENS GRID = 3 COLUMNS
             @include abstracts.md {
                 grid-template-columns: 1fr 1fr 1fr;
                 column-gap: 5vw;
+                margin-top: 20vh;
             }
-            margin-top: 5vh;
 
+            // CONTACT-ITEM GRID ITEM
+            // ITEM = TITLE + CONTACT-INFO
             .contact-item {
-                padding: .5rem;
                 padding: .25rem .5rem 1rem 1rem;
                 background: #fff;
                 border-radius: .25rem;
                 box-shadow: .5rem .5rem .5rem rgba(0,0, 0, .05);
                 transition: .25s;
 
+                // TITLE = ICON + H3 + PSEUDO TEXT 
                 .title {
-                    // border: 1px solid red;
                     text-transform: capitalize;
                     font-size: 1rem;
+                    font-size: abstracts.$font-clamp-sm;
                     transition: .25s;
                     position: relative;
                     h3 {
@@ -54,7 +56,7 @@
                     i {
                         transform: translateY(-1rem) scale(1.1);
                         font-size: 2rem;
-                        filter: drop-shadow(.25rem .25rem .25rem rgba(0, 0, 0, .2));
+                        filter: drop-shadow(.25rem .25rem .25rem rgba(0, 0, 0, .1));
                         margin-bottom: .5rem;
                         transition: .25s ease-in-out;
                     }
@@ -63,9 +65,10 @@
                         content: attr(data-info);
                         position: absolute;
                         top: 1rem;
-                        right: 5vw;
-                        color: hsla(212, 19%, 20%, .08);
-                        font-size: 3rem;
+                        right: .5rem;
+                        color: hsla(212, 19%, 20%, .05);
+                        font-size: 2.5rem;
+                        font-size: clamp(2.5rem, 2vw, 3.5rem);
                         letter-spacing: 1rem;
                         transition: .5s;
                         opacity: .5;
