--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -117,26 +117,17 @@
         display: block;
         padding: .5em 2rem .5rem 1rem;
         width: max-content;
-        border-radius: 1rem;
+        border-radius: abstracts.$brand-br;
         transition: .25s linear;
         -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
         z-index: 2;
-        @media (max-width: 576px){
-            margin: 20vh 0 0;
-        }
-        @include abstracts.sm {
-            margin: 20vh 0 0;
-        }
-        @include abstracts.lg {
-            margin: 15vh 0 0;
-        }
         // PAGE CTA BTN SHADOWS
         &::before,
         &::after {
             position: absolute;
             content: '';
             inset: 0;
-            border-radius: 1rem;
+            border-radius: inherit;
             transition: .25s ease;
         }
 
