--- a/css/style.css
+++ b/css/style.css
@@ -1308,34 +1308,26 @@ form button:hover::after {
   padding: 0.5rem 5vw;
   z-index: 5;
 }
-@media (max-width: 450px) {
-  #nav {
-    padding: 0.25rem 5vw;
-  }
-}
 #nav .logo {
-  transition: 2s ease;
+  transition: 1s ease;
+  background-color: #0a0d0f;
+  border-radius: 0.25rem;
+  border: 1px solid rgba(179, 191, 203, 0.5);
+}
+#nav .logo a {
+  padding: 0 0.5rem;
+  display: block;
 }
 #nav .logo p {
-  background-color: #0a0d0f;
   color: #f4f4f4;
-  border: 1px solid rgba(179, 191, 203, 0.5);
-  padding-left: 0.25rem;
-  padding-block: 0.15rem;
   font-family: "Kanit", sans-serif;
   font-size: 1.125rem;
   font-size: clamp(1rem, 2vw, 1.125rem);
-  font-size: clamp(1rem, 2vw, 1.125rem);
-  font-weight: 400;
   text-transform: capitalize;
-  border-radius: 0.25rem;
-  overflow: hidden;
   transition: 0.5s;
 }
 #nav .logo p span {
-  padding-right: 0.25rem;
   color: #b3c0cc;
-  transition: 0.2s;
 }
 #nav .nav-list ul {
   transition: 0.5s;
