--- a/css/style.css
+++ b/css/style.css
@@ -1345,27 +1345,25 @@ form button:hover::after {
     left: 100%;
     width: 100vw;
     height: 100vh;
-    background-color: #1b2127;
     background-color: #15191e;
+    color: #f4f4f4;
     transition: 0.5s ease;
     z-index: 5;
   }
   #nav .nav-list .links-container ul {
-    margin: 1rem 5vw 1rem;
     background: #29323d;
-    padding: 0.5rem 0;
-    height: max-content;
+    margin: 1rem 5vw 5vh;
+    padding: 1rem 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: right;
-    border-radius: 0.5rem;
-    z-index: 1;
+    align-items: start;
+    gap: 1rem;
+    border-radius: 0.25rem;
     transition: 0.5s ease left;
     position: relative;
-    outline: none;
-    overflow-y: auto;
-    overflow-x: hidden;
+    z-index: 1;
+    overflow: hidden;
   }
   #nav .nav-list .links-container ul li {
     opacity: 0;
@@ -1373,8 +1371,7 @@ form button:hover::after {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 0 auto 0.5rem;
-    width: 95%;
+    width: 100%;
   }
   #nav .nav-list .links-container ul li a {
     transform: translateX(1.5rem);
@@ -1393,7 +1390,7 @@ form button:hover::after {
     content: attr(data-after);
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 60%;
     transform: translate(-50%, -50%) scale(0);
     color: #f0f8ff1a;
     font-size: 2.5rem;
@@ -1426,18 +1423,15 @@ form button:hover::after {
   }
   #nav .nav-list .links-container .contact-links {
     background: #29323d;
-    overflow-x: hidden;
-    overflow-y: auto;
     margin: 1rem 5vw;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
   }
   #nav .nav-list .links-container .contact-links a {
     opacity: 0;
     transform: translateY(1rem);
-    color: #f4f4f4;
     font-size: 1rem;
     margin-bottom: 1rem;
     transition: 0.5s;
@@ -1450,7 +1444,6 @@ form button:hover::after {
   }
   #nav .nav-list .links-container.active {
     left: 0;
-    z-index: 50;
   }
   #nav .nav-list .links-container.active .nav-logo {
     transition: 1.5s;
@@ -1464,9 +1457,6 @@ form button:hover::after {
   #nav .nav-list .links-container.active ul li a {
     transform: translateX(0);
     opacity: 1;
-  }
-  #nav .nav-list .links-container.active ul li i {
-    transition: 1s ease 0.8s;
   }
   #nav .nav-list .links-container.active ul li:nth-child(1) a {
     transition-delay: 0.3s;
@@ -1508,6 +1498,9 @@ form button:hover::after {
   #nav .nav-list .links-container.active .contact-links a:hover i {
     transition: 0.25s;
     color: #b3c0cc;
+    border-right-color: #dc143c;
+    border-right-color: transparent;
+    transform: translateX(0.25rem);
   }
 }
 @media (min-width: 820px) {
