--- a/css/style.css
+++ b/css/style.css
@@ -1349,16 +1349,17 @@ form button:hover::after {
     color: #f4f4f4;
     transition: 0.5s ease;
     z-index: 5;
+    border-top: 1px solid #29323d;
   }
   #nav .nav-list .links-container ul {
     background: #29323d;
-    margin: 1rem 5vw 5vh;
+    margin: 1rem 5vw 2rem;
     padding: 1rem 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    gap: 1rem;
+    gap: 0.5rem;
     border-radius: 0.25rem;
     transition: 0.5s ease left;
     position: relative;
@@ -1423,17 +1424,17 @@ form button:hover::after {
   }
   #nav .nav-list .links-container .contact-links {
     background: #29323d;
-    margin: 1rem 5vw;
+    margin: 0 5vw;
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     border-radius: 0.25rem;
   }
   #nav .nav-list .links-container .contact-links a {
     opacity: 0;
     transform: translateY(1rem);
     font-size: 1rem;
-    margin-bottom: 1rem;
     transition: 0.5s;
   }
   #nav .nav-list .links-container .contact-links a i {
