--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -96,18 +96,19 @@
                 color: abstracts.$text-light;
                 transition: .5s ease;
                 z-index: 5;
+                border-top: 1px solid abstracts.$overlay-blue-dark;
 
                 ul {
                     background: abstracts.$overlay-blue-dark;
 
-                    margin: 1rem 5vw 5vh;
+                    margin: 1rem 5vw 2rem;
                     padding: 1rem .5rem;
                     
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: start;
-                    gap: 1rem;
+                    gap: .5rem;
 
                     border-radius: abstracts.$border-radius-sm;
                     transition: 0.5s ease left;
@@ -190,11 +191,12 @@
                 // CONTACT LINKS
                 .contact-links {
                     background: abstracts.$overlay-blue-dark;
-                    margin: 1rem 5vw;
+                    margin: 0 5vw;
                     padding: 1rem;
 
                     display: flex;
                     flex-direction: column;
+                    gap: 1rem;
 
                     border-radius: abstracts.$border-radius-sm;
 
@@ -202,7 +204,6 @@
                         opacity: 0;
                         transform: translateY(1rem);
                         font-size: 1rem;
-                        margin-bottom: 1rem;
                         transition: .5s;
 
                         i {
