--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -96,12 +96,11 @@
                 color: abstracts.$text-light;
                 transition: .5s ease;
                 z-index: 5;
-                border-top: 1px solid abstracts.$overlay-blue-dark;
 
                 ul {
                     background: abstracts.$overlay-blue-dark;
 
-                    margin: 1rem 5vw 2rem;
+                    margin: 2rem 5vw;
                     padding: 1rem .5rem;
                     
                     display: flex;
