--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -3,6 +3,7 @@
 @forward './footer';
 @forward './header';
 @forward './hero';
+@forward './prices';
 @forward './projects';
 @forward './skills';
 @forward './work';
