--- a/css/style.css
+++ b/css/style.css
@@ -1661,201 +1661,81 @@ form button:hover::after {
     mix-blend-mode: overlay;
   }
 }
-
-.hero {
-  color: #f4f4f4;
-  text-transform: capitalize;
-}
-.hero h1 {
+.banner h1 {
   font-size: 1rem;
   font-size: clamp(.98rem, 1.5vw, 1.125rem);
   font-weight: 300;
   margin-bottom: 0.5rem;
 }
-.hero h2 {
+.banner h2 {
   font-size: 2rem;
   font-size: clamp(2rem, 5vw, 2.5rem);
-  font-size: clamp(2rem, 5vw, 2.5rem);
+  font-size: clamp(1.5rem, 5vw, 2.5rem);
   letter-spacing: -0.05rem;
 }
-.hero p {
+.banner p {
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.125rem);
 }
-.hero span {
+.banner span {
   color: #b3c0cc;
 }
-.hero .hero-content {
-  background: transparent;
-  padding: 5vh 5vw;
-  position: relative;
-  top: 5vh;
-  width: 100%;
-}
-@media (min-width: 768px) {
-  .hero .hero-content {
-    width: max-content;
-    top: 10vh;
-  }
-}
-@media (min-width: 1024px) {
-  .hero .hero-content {
-    top: 15vh;
-  }
-}
-.hero .hero-content .hero-meta-description {
-  color: #b3c0cc;
-  margin-top: 1rem;
-}
-.hero .hero-cta {
-  background: #dc143c;
-  margin: 20vh 0 0;
-  position: relative;
-  display: block;
-  padding: 0.5em 2rem 0.5rem 1rem;
-  width: max-content;
-  border-radius: 0.25rem;
-  transition: 0.25s linear;
-  -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
-  z-index: 2;
-}
-.hero .hero-cta::before, .hero .hero-cta::after {
-  position: absolute;
-  content: "";
-  inset: 0;
-  border-radius: inherit;
-  transition: 0.25s ease;
-}
-.hero .hero-cta::before {
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
-}
-.hero .hero-cta::after {
-  opacity: 1;
-  z-index: -1;
-  animation: 1s cta-btn infinite;
-  transition: 0.25s;
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
-}
-.hero .hero-cta span {
-  position: relative;
-  display: inline-block;
-  text-transform: none;
+
+.hero {
   color: #f4f4f4;
-  font-size: 2.5rem;
-  font-size: clamp(2rem, 5vw, 2.5rem);
-  font-weight: 500;
-  animation: animate 3s ease-in-out infinite;
-  animation-delay: calc(1s + .2s * var(--i));
-  /* cta keyframes*/
+  text-transform: capitalize;
+  background: #0a0d0f;
 }
-@keyframes animate {
-  0% {
-    transform: translateY(0px);
-  }
-  20% {
-    transform: translateY(-5px) scale(1.1);
-  }
-  40%, 100% {
-    transform: translateY(0);
-  }
-}
-@media (max-width: 820px) {
-  .hero .hero-cta:active {
-    transition: 0.2s;
-    transform: scale(0.95);
-  }
-  .hero .hero-cta:active::before {
-    opacity: 0;
-  }
-  .hero .hero-cta:active::after {
-    opacity: 1;
-  }
-}
-@media (min-width: 820px) {
-  .hero .hero-cta:hover {
-    transition: 0.2s;
-    transform: scale(0.95);
-    border-top-right-radius: 5rem;
-  }
-  .hero .hero-cta:hover::before {
-    border-top-right-radius: 5rem;
-    opacity: 0;
-  }
-  .hero .hero-cta:hover::after {
-    border-top-right-radius: 5rem;
-    opacity: 1;
-  }
-}
-.hero .hero-index-content {
-  padding: 5vh 5vw;
-  position: relative;
-  top: 10vh;
-}
-@media (min-width: 1024px) {
-  .hero .hero-index-content {
-    top: 20vh;
-  }
-}
-.hero .hero-index-content .content-title {
-  margin-bottom: 25vh;
-}
-@media (min-width: 1024px) {
-  .hero .hero-index-content .content-title {
-    margin-bottom: 5vh;
-  }
-}
-.hero .hero-index-content .content-value .cta {
-  width: 12rem;
-  margin-top: 1rem;
-}
-@media (min-width: 820px) {
-  .hero .hero-index-content .content-value .cta {
-    width: 14rem;
-  }
-}
-.hero .hero-index-content .content-value .cta .btn {
-  width: 100%;
-  padding: 1rem;
-  font-size: 1rem;
-  font-size: clamp(1rem, 2vw, 1.125rem);
-}
-.hero .hero-index-content .content-value .cta .btn::before {
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
-}
-.hero .hero-index-content .content-value .cta .btn::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
-}
-.hero .hero-image {
-  position: absolute;
-  inset: 0;
-  z-index: -1;
-  background: #475462;
-}
-.hero .hero-image img {
-  mix-blend-mode: overlay;
+
+.hero-grid {
+  outline: 3px solid green;
   height: 100%;
   width: 100%;
-  object-fit: cover;
-  object-position: 10% 50%;
+  padding: 15vh 5vw 5vh;
+  display: grid;
+  grid-template-rows: auto 40% 40%;
+  row-gap: 2rem;
+  grid-template-areas: "grid-title" "grid-image" "grid-subtitle";
 }
-@media (min-width: 1024px) {
-  .hero .hero-image {
-    background: #0a0d0f;
-    background: #000;
+@media (min-width: 768px) {
+  .hero-grid {
+    padding: 20vh 5vw;
+    grid-template-columns: 45% auto;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    grid-template-areas: "grid-title grid-image" "grid-subtitle grid-image";
   }
-  .hero .hero-image img {
-    mix-blend-mode: unset;
-    object-fit: contain;
-    object-fit: cover;
-    width: 100%;
-    object-position: 10% 40%;
-    opacity: 0.8;
-    position: relative;
-    right: -20vw;
-    aspect-ratio: 16/9;
+}
+@media (min-width: 820px) {
+  .hero-grid {
+    grid-template-rows: 1fr auto;
   }
+}
+.hero-grid .grid-title {
+  grid-area: grid-title;
+}
+.hero-grid .grid-title h2 {
+  font-size: 5vw;
+  font-size: 2.5rem;
+  font-size: 1.5rem;
+  font-size: clamp(1.5rem, 5vw, 2.5rem);
+  text-wrap: balance;
+}
+.hero-grid .grid-image {
+  grid-area: grid-image;
+}
+.hero-grid .grid-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+}
+.hero-grid .grid-subtitle {
+  grid-area: grid-subtitle;
+}
+.hero-grid .grid-subtitle .btn {
+  margin: 0.5rem 0 0;
 }
 
 .prices {
