--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,7 +6,7 @@
     position: relative;
     overflow: hidden;
     isolation: isolate;
-    
+    // border: 2px solid red;
     // ABOUT PAGE BANNER
     &.about-banner {
         background: abstracts.$overlay-blue-darker;
@@ -59,12 +59,6 @@
             }
         }
     }
-}
-
-// HERO SECTION
-.hero {
-    color: abstracts.$text-light;
-    text-transform: capitalize;
     h1 {
         font-size: 1rem;
         font-size: abstracts.$font-clamp-xsm;
@@ -73,8 +67,8 @@
     }
     h2 {
         font-size: 2rem;
-        font-size: clamp(2rem, 5vw, 2.5rem);
         font-size: abstracts.$font-clamp-lg;
+        font-size: clamp(1.5rem, 5vw, 2.5rem);
         letter-spacing: -0.05rem;
     }
     p {
@@ -84,205 +78,277 @@
     span {
         color: abstracts.$brand;
     }
+}
+
+// HERO SECTION
+.hero {
+    color: abstracts.$text-light;
+    text-transform: capitalize;
+    // border: 3px solid yellow;
+    background: abstracts.$overlay-blue-black;
+    // background: #000;
+    
     // PAGE HERO CONTENT
-    .hero-content {
-        // border: 1px solid #fff;
-        background: transparent;
-        padding: 5vh 5vw;
-        position: relative;
-        top: 5vh;
-        width: 100%;
+    // .hero-content {
+    //     border: 1px solid #fff;
+    //     background: transparent;
+    //     padding: 5vh 5vw;
+    //     position: relative;
+    //     top: 5vh;
+    //     width: 100%;
 
-        @include abstracts.md {
-            width: max-content;
-            top: 10vh;
-        }
+    //     @include abstracts.md {
+    //         width: max-content;
+    //         top: 10vh;
+    //     }
 
-        @include abstracts.xlg {
-            top: 15vh;
-        }
+    //     @include abstracts.xlg {
+    //         top: 15vh;
+    //     }
 
-        // "AKA" SPAN
-        .hero-meta-description {
-            color: abstracts.$brand;
-            margin-top: 1rem;
-        }
-    }
+    //     // "AKA" SPAN
+    //     .hero-meta-description {
+    //         color: abstracts.$brand;
+    //         margin-top: 1rem;
+    //     }
+    // }
 
     // ANIMATED CTA
-    .hero-cta {
-        background: abstracts.$span-crimson;
-        margin: 20vh 0 0;
-        position: relative;
-        display: block;
-        padding: .5em 2rem .5rem 1rem;
-        width: max-content;
-        border-radius: abstracts.$brand-br;
-        transition: .25s linear;
-        -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
-        z-index: 2;
-        // PAGE CTA BTN SHADOWS
-        &::before,
-        &::after {
-            position: absolute;
-            content: '';
-            inset: 0;
-            border-radius: inherit;
-            transition: .25s ease;
-        }
+    // .hero-cta {
+    //     background: abstracts.$span-crimson;
+    //     margin: 20vh 0 0;
+    //     position: relative;
+    // }
+    //     display: block;
+    //     padding: .5em 2rem .5rem 1rem;
+    //     width: max-content;
+    //     border-radius: abstracts.$brand-br;
+    //     transition: .25s linear;
+    //     -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+    //     z-index: 2;
+    //     // PAGE CTA BTN SHADOWS
+    //     &::before,
+    //     &::after {
+    //         position: absolute;
+    //         content: '';
+    //         inset: 0;
+    //         border-radius: inherit;
+    //         transition: .25s ease;
+    //     }
 
-        // ::before = box shadow
-        &::before {
-            box-shadow: abstracts.$box-light-top-sm;
-            background: abstracts.$button-crimson;
-        }
-        &::after {
-            opacity: 1;
-            z-index: -1;
-            animation: 1s cta-btn infinite;
-            transition: .25s;
-            background: abstracts.$button-crimson-hover;
-            box-shadow: abstracts.$box-light-top-sm-hover;
-        }
+    //     // ::before = box shadow
+    //     &::before {
+    //         box-shadow: abstracts.$box-light-top-sm;
+    //         background: abstracts.$button-crimson;
+    //     }
+    //     &::after {
+    //         opacity: 1;
+    //         z-index: -1;
+    //         animation: 1s cta-btn infinite;
+    //         transition: .25s;
+    //         background: abstracts.$button-crimson-hover;
+    //         box-shadow: abstracts.$box-light-top-sm-hover;
+    //     }
 
-        // ANIMATED BTN TEXT
-        span {
-            position: relative;
-            display: inline-block;
-            text-transform: none;
-            color: abstracts.$text-light;
-            font-size: 2.5rem;
-            font-size: abstracts.$font-clamp-lg;
-            font-weight: 500;
-            animation: animate 3s ease-in-out infinite;
-            animation-delay: calc(1s + .2s * var(--i));
+    //     // ANIMATED BTN TEXT
+    //     span {
+    //         position: relative;
+    //         display: inline-block;
+    //         text-transform: none;
+    //         color: abstracts.$text-light;
+    //         font-size: 2.5rem;
+    //         font-size: abstracts.$font-clamp-lg;
+    //         font-weight: 500;
+    //         animation: animate 3s ease-in-out infinite;
+    //         animation-delay: calc(1s + .2s * var(--i));
 
-            /* cta keyframes*/
-            @keyframes animate {
-                0% {
-                    transform: translateY(0px);
-                }
+    //         /* cta keyframes*/
+    //         @keyframes animate {
+    //             0% {
+    //                 transform: translateY(0px);
+    //             }
 
-                20% {
-                    transform: translateY(-5px) scale(1.1);
-                }
+    //             20% {
+    //                 transform: translateY(-5px) scale(1.1);
+    //             }
 
-                40%,
-                100% {
-                    transform: translateY(0);
-                }
-            }
-        }
+    //             40%,
+    //             100% {
+    //                 transform: translateY(0);
+    //             }
+    //         }
+    //     }
 
-        // HOVER AND ACTIVE CLASS
-        @media (max-width: 820px) {
-            &:active {
-                transition: .2s;
-                transform: scale(.95);
-                &::before {
-                    opacity: 0;
-                }
-                &::after {
-                    opacity: 1;
-                }
-            }
-        }
-        // DESKTOP HOVER
-        @media (min-width: 820px) {
-            &:hover {
-                transition: .2s;
-                transform: scale(.95);
-                border-top-right-radius: 5rem;
+    //     // HOVER AND ACTIVE CLASS
+    //     @media (max-width: 820px) {
+    //         &:active {
+    //             transition: .2s;
+    //             transform: scale(.95);
+    //             &::before {
+    //                 opacity: 0;
+    //             }
+    //             &::after {
+    //                 opacity: 1;
+    //             }
+    //         }
+    //     }
+    //     // DESKTOP HOVER
+    //     @media (min-width: 820px) {
+    //         &:hover {
+    //             transition: .2s;
+    //             transform: scale(.95);
+    //             border-top-right-radius: 5rem;
 
-                &::before {
-                    border-top-right-radius: 5rem;
-                    opacity: 0;
-                }
+    //             &::before {
+    //                 border-top-right-radius: 5rem;
+    //                 opacity: 0;
+    //             }
 
-                &::after {
-                    border-top-right-radius: 5rem;
-                    opacity: 1;
-                }
-            }
-        }
-        // end of button hover, focus and active states
-    }
+    //             &::after {
+    //                 border-top-right-radius: 5rem;
+    //                 opacity: 1;
+    //             }
+    //         }
+    //     }
+    //     // end of button hover, focus and active states
+    // }
 
-    .hero-index-content {
-        padding: 5vh 5vw;
-        position: relative;
-        top: 10vh;
+    // .hero-index-content {
+    //     padding: 5vh 5vw;
+    //     position: relative;
+    //     top: 10vh;
 
-        @include abstracts.xlg {
-            top: 20vh;
-        }
+    //     @include abstracts.xlg {
+    //         top: 20vh;
+    //     }
 
-        .content-title {
-            margin-bottom: 25vh;
+    //     .content-title {
+    //         margin-bottom: 25vh;
 
-            @include abstracts.xlg {
-                margin-bottom: 5vh;
-            }
-        }
-
-
-        .content-value {
-            .cta {
-                width: 12rem;
-                margin-top: 1rem;
-                @include abstracts.lg {
-                    width: 14rem;
-                }
-                .btn {
-                    width: 100%;
-                    padding: 1rem;
-                    font-size: 1rem;
-                    font-size: abstracts.$font-clamp-sm;
-                    &::before {
-                        background: abstracts.$button-crimson;
-                    }
-                    &::after {
-                        background: abstracts.$button-crimson-hover;
-                    }
-                }
-            }
-        }
-    }
-
-    .hero-image {
-        // border: 3px solid yellow;
-        position: absolute;
-        inset: 0;
-        z-index: -1;
-        background: abstracts.$overlay-blue-light;
-        img {
-            // border: 5px solid green;
-            mix-blend-mode: overlay;
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            object-position: 10% 50%;
-        }
+    //         @include abstracts.xlg {
+    //             margin-bottom: 5vh;
+    //         }
+    //     }
 
 
-        @include abstracts.xlg {
-            // border: 4px solid yellow;
-            background: abstracts.$overlay-blue-black;
-            background: #000;
-            img {
-                // border: 2px solid red;
-                mix-blend-mode: unset;
-                object-fit: contain;
-                object-fit: cover;
-                width: 100%;
-                object-position: 10% 40%;
-                opacity: .8;
-                position: relative;
-                right: -20vw;
-                aspect-ratio: 16/9;
-            }
-        }
+        // .content-value {
+        //     .cta {
+        //         width: 12rem;
+        //         margin-top: 1rem;
+        //         @include abstracts.lg {
+        //             width: 14rem;
+        //         }
+        //         .btn {
+        //             width: 100%;
+        //             padding: 1rem;
+        //             font-size: 1rem;
+        //             font-size: abstracts.$font-clamp-sm;
+        //             &::before {
+        //                 background: abstracts.$button-crimson;
+        //             }
+        //             &::after {
+        //                 background: abstracts.$button-crimson-hover;
+        //             }
+        //         }
+        //     }
+        // }
+    // }
 
-    }
+    // .hero-image {
+    //     // border: 3px solid yellow;
+    //     position: absolute;
+    //     inset: 0;
+    //     z-index: -1;
+    //     background: abstracts.$overlay-blue-light;
+    //     img {
+    //         // border: 5px solid green;
+    //         mix-blend-mode: overlay;
+    //         height: 100%;
+    //         width: 100%;
+    //         object-fit: cover;
+    //         object-position: 10% 50%;
+    //     }
+
+
+    //     @include abstracts.xlg {
+    //         // border: 4px solid yellow;
+    //         background: abstracts.$overlay-blue-black;
+    //         background: #000;
+    //         img {
+    //             // border: 2px solid red;
+    //             mix-blend-mode: unset;
+    //             object-fit: contain;
+    //             object-fit: cover;
+    //             width: 100%;
+    //             object-position: 10% 40%;
+    //             opacity: .8;
+    //             position: relative;
+    //             right: -20vw;
+    //             aspect-ratio: 16/9;
+    //         }
+    //     }
+
+    // }
 }
 // END OF HERO
+
+
+.hero-grid {
+    outline: 3px solid green;
+    height: 100%;
+    width: 100%;
+    padding: 15vh 5vw 5vh;
+
+    display: grid;
+    grid-template-rows: auto 40% 40%;
+    row-gap: 2rem;
+    grid-template-areas: 'grid-title' 'grid-image' 'grid-subtitle';
+
+    @include abstracts.md {
+        padding: 20vh 5vw;
+        grid-template-columns: 45% auto;
+        grid-template-rows:  1fr 1fr;
+        column-gap: 1rem;
+        row-gap: 1rem;
+        grid-template-areas: 'grid-title grid-image' 
+                                'grid-subtitle grid-image';
+        // grid-template-areas: 'grid-title grid-subtitle' 'grid-image';
+    }
+    @include abstracts.lg {
+        grid-template-rows:  1fr auto;
+    }
+    .grid-title {
+        grid-area: grid-title;
+
+        h2 {
+            font-size: 5vw;
+            font-size: 2.5rem;
+            font-size: 1.5rem;
+            font-size: clamp(1.5rem, 5vw, 2.5rem);
+            text-wrap: balance;
+        }
+    }
+
+    .grid-image {
+        grid-area: grid-image;
+        // border: 4px solid blue;
+        // background: abstracts.$overlay-blue-light;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            // max-width: 600px;
+            // mix-blend-mode: overlay;
+            opacity: .8;
+            // max-width: 300px;
+        }
+    }
+
+    .grid-subtitle {
+        grid-area: grid-subtitle;
+        .btn {
+            margin: .5rem 0 0;
+        }
+    }
+
+}
