--- a/css/style.css
+++ b/css/style.css
@@ -1685,6 +1685,7 @@ form button:hover::after {
   color: #f4f4f4;
   text-transform: capitalize;
   background: #0a0d0f;
+  background: linear-gradient(0deg, #000 70%, #1f252d);
 }
 
 .hero-grid {
@@ -1729,7 +1730,6 @@ form button:hover::after {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.8;
 }
 .hero-grid .grid-subtitle {
   grid-area: grid-subtitle;
