--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -86,6 +86,7 @@
     text-transform: capitalize;
     // border: 3px solid yellow;
     background: abstracts.$overlay-blue-black;
+    background: linear-gradient(0deg, #000 70%, abstracts.$overlay-blue-darker);
     // background: #000;
     
     // PAGE HERO CONTENT
@@ -338,8 +339,8 @@
             height: 100%;
             object-fit: cover;
             // max-width: 600px;
-            // mix-blend-mode: overlay;
-            opacity: .8;
+            // mix-blend-mode: darken;
+            // opacity: .8;
             // max-width: 300px;
         }
     }
