--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -34,8 +34,8 @@ $overlay: linear-gradient(0deg, #29323c 0%, #485563 100%);
 $overlay-dark: linear-gradient(0deg, hsl(214, 18%, 15%) 30% , hsl(212, 19%, 25%) 70%);
 $overlay-btn: linear-gradient(0deg, #20262e, #485563 );
 $overlay-btn-hover: linear-gradient(0deg , #485563, #20262e );
-$overlay-blue-dark:hwb(213 16% 76%);
-$overlay-blue-darker:#1f252d;
+$overlay-blue-dark:hsl(213, 20%, 20%);
+$overlay-blue-darker:hsl(214, 18%, 15%);
 $overlay-blue-darkest:hsl(213, 18%, 10%);
 $overlay-blue-black:hsl(213, 18%, 5%);
 $overlay-black:hsl(213, 18%, 1%);
