--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ section {
 section .section-title {
   font-size: 2.5rem;
   font-size: clamp(2rem, 5vw, 2.5rem);
-  color: hwb(213 16% 76%);
+  color: #29323d;
   margin-bottom: 10vh;
   text-transform: uppercase;
   -webkit-box-reflect: below -0.9rem linear-gradient(transparent, #0003);
@@ -55,16 +55,16 @@ section .section-title span {
   45% {
     top: -20px;
     opacity: 0;
-    color: hwb(213 16% 76%);
+    color: #29323d;
   }
   46% {
     top: 20px;
     opacity: 0;
     color: #dc143c;
-    color: hwb(213 16% 76%);
+    color: #29323d;
   }
   65% {
-    color: hwb(213 16% 76%);
+    color: #29323d;
   }
 }
 section .section-title.io-item {
@@ -122,7 +122,7 @@ section .section-title.active-item span {
 .section-pad.pad-logo {
   overflow: hidden;
   height: 60vh;
-  background-color: hwb(213 16% 76%);
+  background-color: #29323d;
 }
 .section-pad.pad-logo figure {
   margin: 0 auto;
@@ -214,7 +214,7 @@ section .section-title.active-item span {
   left: 0;
   width: 100%;
   height: 100%;
-  background: hwb(213 16% 76%);
+  background: #29323d;
   border-radius: 1rem;
   z-index: -1;
   transition: 0.125s;
@@ -350,12 +350,12 @@ section .section-title.active-item span {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
 }
 .btn.btn-secondary {
-  color: hwb(213 16% 76%);
+  color: #29323d;
 }
 .btn.btn-secondary::before {
   background: #ffff;
   box-shadow: none;
-  border: 1px solid hwb(213 16% 76%);
+  border: 1px solid #29323d;
 }
 .btn.btn-secondary::after {
   background: #fafafa;
@@ -372,12 +372,12 @@ section .section-title.active-item span {
   background: linear-gradient(0deg, #485563, #20262e);
 }
 .btn.btn-light {
-  color: hwb(213 16% 76%);
+  color: #29323d;
 }
 .btn.btn-light::before {
   background: linear-gradient(0deg, #ddd, #f4f4f4);
   box-shadow: none;
-  border: 1px solid hwb(213 16% 76%);
+  border: 1px solid #29323d;
 }
 .btn.btn-light::after {
   background: linear-gradient(0deg, #f4f4f4, #ddd);
@@ -410,7 +410,7 @@ section .section-title.active-item span {
 }
 
 form {
-  background-color: hwb(213 16% 76%);
+  background-color: #29323d;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -562,7 +562,7 @@ form button:hover::after {
   font-size: 10px;
   height: 3em;
   width: 3em;
-  background: hwb(213 16% 76%);
+  background: #29323d;
   position: relative;
   display: flex;
   align-items: center;
@@ -678,8 +678,8 @@ form button:hover::after {
 /* The progress bar (scroll indicator) */
 .progress-bar {
   height: 3px;
-  background: hwb(213 16% 76%);
-  background: linear-gradient(90deg, hwb(213 16% 76%), #475462, hwb(213 16% 76%));
+  background: #29323d;
+  background: linear-gradient(90deg, #29323d, #475462, #29323d);
   opacity: 0.1;
   width: 0%;
   transition: 0.5s;
@@ -754,10 +754,10 @@ form button:hover::after {
 .about .col-right .article-container article .article-body .body-item i {
   font-size: 2rem;
   margin-bottom: 0.5rem;
-  color: hwb(213 16% 76%);
+  color: #29323d;
 }
 .about .col-right .article-container article .article-body .body-item .body-item-title {
-  color: hwb(213 16% 76%);
+  color: #29323d;
   margin-bottom: 0.5rem;
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.125rem);
@@ -977,7 +977,7 @@ form button:hover::after {
 }
 #footer .footer .footer-top .socialMedia-links {
   grid-template-columns: 1fr;
-  background-color: hwb(213 16% 76%);
+  background-color: #29323d;
   width: 100%;
   padding: 10vh 5vw;
 }
@@ -1036,7 +1036,7 @@ form button:hover::after {
   font-family: "Kanit", sans-serif;
 }
 #footer .footer .footer-top .socialMedia-links .socialMedia-item a {
-  background: hwb(213 16% 76%);
+  background: #29323d;
   padding: 0.7rem;
   width: 13rem;
   color: #f4f4f4;
@@ -1351,7 +1351,7 @@ form button:hover::after {
     z-index: 5;
   }
   #nav .nav-list .links-container ul {
-    background: hwb(213 16% 76%);
+    background: #29323d;
     margin: 2rem 5vw;
     padding: 1rem 0.5rem;
     display: flex;
@@ -1423,7 +1423,7 @@ form button:hover::after {
     color: #b3c0cc;
   }
   #nav .nav-list .links-container .contact-links {
-    background: hwb(213 16% 76%);
+    background: #29323d;
     margin: 0 5vw;
     padding: 1rem;
     display: flex;
@@ -1838,7 +1838,7 @@ form button:hover::after {
   align-items: center;
   justify-content: center;
   flex-direction: column-reverse;
-  border: 1px solid hwb(213 16% 76%);
+  border: 1px solid #29323d;
   outline: none;
   border-radius: 0.5rem;
   overflow: hidden;
@@ -2110,7 +2110,7 @@ form button:hover::after {
   border: 0.125rem solid #b3c0cc;
 }
 .skill-section-container.border.border-dark {
-  border-color: hwb(213 16% 76%);
+  border-color: #29323d;
 }
 
 .skill-section {
@@ -2133,7 +2133,7 @@ form button:hover::after {
     padding: 20vh 5vw 10vh;
     height: 90vh;
     height: 100vh;
-    background: linear-gradient(140deg, #1f252d 20%, hwb(213 16% 76%));
+    background: linear-gradient(140deg, #1f252d 20%, #29323d);
   }
   .skill-section .skill-section-title::after {
     content: "";
@@ -2332,7 +2332,7 @@ form button:hover::after {
 .skill-section .skill-section-content .skill-article {
   padding: 1rem;
   border-radius: 0.25rem;
-  background: hwb(213 16% 76%);
+  background: #29323d;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 26, 0.1);
   transition: 0.25s;
 }
@@ -2364,7 +2364,7 @@ form button:hover::after {
   border-bottom: 1px solid #15191e;
 }
 .skill-section .skill-section-content .skill-article ul li::marker {
-  color: hwb(213 16% 76%);
+  color: #29323d;
   transition: 0.25s;
 }
 .skill-section .skill-section-content .skill-article ul li:last-of-type {
@@ -2387,8 +2387,8 @@ form button:hover::after {
 }
 .skill-section.light-section {
   background: #f4f4f4;
-  color: hwb(213 16% 76%);
-  border-bottom: 0.125rem solid hwb(213 16% 76%);
+  color: #29323d;
+  border-bottom: 0.125rem solid #29323d;
 }
 .skill-section.light-section:last-of-type {
   border-bottom: none;
@@ -2708,7 +2708,7 @@ form button:hover::after {
   opacity: 0;
 }
 .work .work-container .item .item-header .item-cta a.cta-secondary {
-  border: 1px solid hwb(213 16% 76%);
+  border: 1px solid #29323d;
   color: #1f252d;
 }
 .work .work-container .item .item-header .item-cta a.cta-secondary i {
