--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -28,8 +28,7 @@ body {
 
     .icon {
         width: 1.125rem;
-        height: 1.125rem;
-        // width: clamp(1.5rem, 1vw, 1.0125rem);
+        height: auto;
     }
 }
 
