--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -350,11 +350,15 @@
 
     .grid-subtitle {
         grid-area: grid-subtitle;
+
+        p {
+            line-height: 1.6;
+        }
         .btn {
-            margin: .5rem 0 0;
+            margin: 1rem 0 0;
 
             .icon {
-                width: 1rem;
+                width: .95rem;
             }
         }
     }
