--- a/css/style.css
+++ b/css/style.css
@@ -1748,6 +1748,8 @@ form button:hover::after {
 }
 .hero-grid .grid-subtitle .btn {
   margin: 1rem 0 0;
+  width: 10.5rem;
+  width: clamp(10.5rem, 25vw, 12rem);
 }
 .hero-grid .grid-subtitle .btn .icon {
   width: 0.95rem;
