--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -2,7 +2,7 @@
 $background-light: #fff;
 $background-gray: #f4f4f4;
 $background-dark: #333;
-$background-light: #fff;
+$background-light: #f4f4f4;
 $brand-overlay: #a6b2bf;
 
 // TEXT COLORS
